<resources>
    <string name="app_name">PokeDex</string>
    <string name="action_1">more</string>

    <string name="lenguage">en</string>

    <string name="poke_name">#%1$d %2$s</string>

    <!-- STATS -->
    <string name="st_hp">HP %1$d/255</string>
    <string name="st_at">ATK %1$d/255</string>
    <string name="st_df">DEF %1$d/255</string>
    <string name="st_sa">SPA %1$d/255</string>
    <string name="st_sd">SPD %1$d/255</string>
    <string name="st_sp">SPE %1$d/255</string>
    <string name="stats_title">Base stats</string>

    <string name="peso">Height %1$.1f kg.</string>
    <string name="altura">Weight %1$.1f m.</string>

    <string name="normal">Normal</string>
    <string name="shiny">Shiny</string>
    <string name="search_title">Search</string>

    <string name="error_conection">Central Pokedex - No connection</string>
    <string name="who">Who is that Pokemon?</string>
    <string name="it_is">Is %1$s</string>
</resources>